// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DocumentOutline header blocks present should match snapshot 1`] = `
<div
  className="document-outline"
>
  <ul>
    <TableOfContentsItem
      isValid={true}
      key="0"
      level="H2"
      path={Array []}
      target="'#block-4831ae77-9be2-4794-9510-b4d6db6cd5ea"
    >
      Heading parent
    </TableOfContentsItem>
    <TableOfContentsItem
      isValid={true}
      key="1"
      level="H3"
      path={Array []}
      target="'#block-e0ef6a1e-3bce-46d4-93cb-2955d6913591"
    >
      Heading child
    </TableOfContentsItem>
  </ul>
</div>
`;

exports[`DocumentOutline header blocks present should render warnings for multiple h1 headings 1`] = `
<div
  className="document-outline"
>
  <ul>
    <TableOfContentsItem
      isValid={false}
      key="0"
      level="H1"
      path={Array []}
      target="'#block-b56e0f74-0285-4453-8b43-e524cd0bf933"
    >
      Heading 1
      <br
        key="incorrect-break-multiple-h1"
      />
      <em
        key="incorrect-message-multiple-h1"
      >
        (Multiple H1 headings are not recommended)
      </em>
    </TableOfContentsItem>
    <TableOfContentsItem
      isValid={false}
      key="1"
      level="H1"
      path={Array []}
      target="'#block-b56e0f74-0285-4453-8b43-e524cd0bf933"
    >
      Heading 1
      <br
        key="incorrect-break-multiple-h1"
      />
      <em
        key="incorrect-message-multiple-h1"
      >
        (Multiple H1 headings are not recommended)
      </em>
    </TableOfContentsItem>
  </ul>
</div>
`;
